syntax = "proto3";

import "sale.proto";

option java_multiple_files = true;
option java_package = "com.example.grpc.user";
option java_outer_classname = "SaleServiceProto";

service SaleService {
  rpc getRevenueAndProfit (GetRevenueAndProfitRequest) returns (GetRevenueAndProfitResponse);
}